--- a/siteFiles/index.html
+++ b/siteFiles/index.html
@@ -231,7 +231,7 @@
 	  		      <ul class="chart-horizontal">
 	  		      <li class="chart-bar" style="width: 80%;">
 	  		        <span class="chart-label">
-	  		          Sketch
+	  		          Photoshop
 	  		        </span>
 	  		      </li>
 	  		      <li class="chart-bar" style="width: 60%;">
