updated github link
added github to link to globe icon

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 	  <button class="word word12" onclick="toggle_visibility('contact-info')">Contact</button>
 
 	  <a href="Forrest_Church_Web_Resume.pdf" id="download-icon" download="Resume_Church_Forrest_Web.pdf"><img src="assets/download.png" alt="downoad download-icon" height="75px">
-	  <a id="linked-in" href="https://www.linkedin.com/in/laforrest-church-4b5a72140"><img src="assets/linked.png" alt="linked in organe logo" height="75px"></a>
-	  <a href="#" id="web-icon" target="_blank"><img src="assets/earth.png" alt="globe world-icon" height="75px"></a>
+	  <a id="linked-in" href="https://www.linkedin.com/in/laforrest-church-4b5a72140"><img src="assets/linked.png" alt="linked in orange logo" height="75px"></a>
+	  <a href="https://github.com/ltchurch88t" id="web-icon" target="_blank"><img src="assets/earth.png" alt="globe world-icon" height="75px"></a>
 
 	  <div id="about-me" style="display: none" onclick="toggle_visibility('about-me')">
 	  	<img class="close" src="assets/close.svg" height="30px" width="30px">
